fixes z-index viewer

--- a/src/scss/pages/_viewer.scss
+++ b/src/scss/pages/_viewer.scss
@@ -51,6 +51,7 @@
         &__img {
             width: 12rem;
             position: fixed;
+            z-index: 3;
         }
 
         &__title {
